fixing some styling, fixing social media alignments, and fixing extra space on ipad.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -579,7 +579,7 @@ span.block {
 }
 
  blockquote#whats-new span {
-  color: #000;
+  color: #444;
 }
 
 .util ul {
@@ -1424,8 +1424,7 @@ span.glyphicon-map-marker {
 /* FOOTER  */
 .bar {
   position: relative;
-  left: -20px;
-  width: 114%;
+  width: 100%;
   height: 13px;
   margin-bottom: 25px;
   background: #2a4d77; /* Old browsers */
